--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             <li class="list-item wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0.3s">
                                 <span class="check"><img src="assets/img/check.png" alt=""></span>
                                 <p class="text">
-                                    Access to payments partner's program and receive revenue
+                                    Access to payments partner's program
                                 </p>
                             </li>
                             
